--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -19,7 +19,7 @@
     content: "";
     position: absolute;
     bottom: 0;
-    height: 10px;
+    height: 1px;
     background: var(--global-border-color);
     width: 100%;
   }
@@ -47,8 +47,8 @@
 .masthead__menu {
 
   ul {
-    margin: 0;
-    padding: 0;
+    margin: 10;
+    padding: 10em;
     clear: both;
     list-style-type: none;
   }
