--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -47,8 +47,8 @@
 .masthead__menu {
 
   ul {
-    margin: 10;
-    padding: 10em;
+    margin: 0;
+    padding: 0;
     clear: both;
     list-style-type: none;
   }
@@ -61,7 +61,7 @@
   white-space: nowrap;
 
   &--lg {
-    padding-right: 2em;
+    padding-right: 20em;
     font-weight: 700;
   }
 }
