Add margin to navbar list items

--- a/_sass/include/_utilities.scss
+++ b/_sass/include/_utilities.scss
@@ -502,3 +502,7 @@ a.reversefootnote {
   color: $danger-color;
   font-weight: bold;
 }
+
+.navbar-nav > li {
+  margin-right: 20px; // adjust as needed
+}
