--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -14,4 +14,11 @@
 <link rel="icon" href="/images/favicon.ico"/>
 <meta name="theme-color" content="#ffffff"/>
 
+<style>
+.greedy-nav .visible-links li {
+  margin-right: 25px !important;
+}
+</style>
+
+
 <!-- end custom head snippets -->
