--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -55,7 +55,7 @@
 }
 
 .masthead__menu-item {
-  background-color: var(--global-bg-color);
+  background-color: #c5320e;
   display: block;
   list-style-type: none;
   white-space: nowrap;
