--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -61,7 +61,7 @@
   white-space: nowrap;
 
   &--lg {
-    padding-right: 2em;
-    font-weight: 700;
+    padding-right: 5;
+    font-weight: 1;
   }
 }
