--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -60,8 +60,7 @@
   list-style-type: none;
   white-space: nowrap;
 
-  &--lg {
-    padding-right: 0;
-    font-weight: 0;
-  }
+   padding-left: 5em; 
+  padding-right: 5em;
+  
 }
