--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -30,8 +30,8 @@
     padding: 0.5em 1em;
     font-family: $sans-serif-narrow;
 
-    @include breakpoint($x-large) {
-      max-width: $x-large;
+    @include breakpoint(1) {
+      max-width: 1;
     }
 
     nav {
