--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -56,7 +56,7 @@
 }
 
 .masthead__menu-item {
-  background-color: #c5320e;
+  background-color: var(--global-bg-color);
   display: block;
   list-style-type: none;
   white-space: nowrap;
