--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -185,7 +185,7 @@
     text-decoration: none;
 
     &:hover {
-      color: var(--global-masthead-link-color-hover);
+      color: #FF0000;
     }
   }
 
