--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -277,7 +277,7 @@
       font-size: $type-size-5;
 
       &:hover {
-        color: var(--global-masthead-link-color-hover);
+        color: #FFFF00;
         background: var(--global-border-color);
       }
     }
