--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -278,7 +278,7 @@
 
       &:hover {
         color: #FFFF00;
-        background: var(--global-border-color);
+        background: #FFFF00;
       }
     }
 
