--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -88,7 +88,7 @@
       border-radius: 0;
 
       &:hover {
-        color: var(--global-link-color-hover);
+        color: #FFFF00;
       }
 
       &.current {
