--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -418,7 +418,7 @@
 
     &:hover {
       color: #FFFF00;
-      background: var(--global-link-color-hover);
+      background: #FFFF00;
     }
   }
 
