--- a/_sass/include/_utilities.scss
+++ b/_sass/include/_utilities.scss
@@ -407,7 +407,7 @@ body:hover .visually-hidden button {
   background-color: #f5f5f5;
   border: 1px solid #e3e3e3;
   border-radius: $border-radius;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px #FFFF00;
 }
 
 
@@ -448,7 +448,7 @@ body:hover .visually-hidden button {
   background: #fff;
   border: 1px solid var(--global-border-color);
   border-radius: $border-radius;
-  box-shadow: $box-shadow;
+  box-shadow: #FFFF00;
 
   &__title {
     margin: 0;
