--- a/_sass/theme/_default_light.scss
+++ b/_sass/theme/_default_light.scss
@@ -37,10 +37,10 @@ $sidebar-screen-min-width   : 1024px;
     --global-code-text-color            : #{$darker-gray};
     --global-fig-caption-color          : mix(#fff,  #{$dark-gray}, 25%);
     --global-link-color                 : #52adc8;
-    --global-link-color-hover           : mix(#000, #2f7f93, 25%);
+    --global-link-color-hover           : #FFFF00;
     --global-link-color-visited         : mix(#fff, #2f7f93, 25%);  
-    --global-masthead-link-color        : #{$dark-gray};
-    --global-masthead-link-color-hover  : mix(#000, #{$gray}, 25%);    
+    --global-masthead-link-color        : #FFFF00;
+    --global-masthead-link-color-hover  : #FFFF00;    
     --global-text-color                 : #{$dark-gray};
     --global-text-color-light           : #{$light-gray};
     --global-thead-color                : #{$lighter-gray};
