--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -45,10 +45,10 @@ $sidebar-screen-min-width   : 1024px;
     --global-code-text-color            : #{$darker-primary-color};
     --global-fig-caption-color          : #{$light-primary-color};
     --global-link-color                 : #{$link};
-    --global-link-color-hover           : #{$link-dark};
+    --global-link-color-hover           : #FFFF00;
     --global-link-color-visited         : #{$link-light};
-    --global-masthead-link-color        : #{$text};
-    --global-masthead-link-color-hover  : #{$link};
+    --global-masthead-link-color        : #FFFF00;
+    --global-masthead-link-color-hover  : #FFFF00;
     --global-text-color                 : #{$text};
     --global-text-color-light           : #{$light-primary-color};
     --global-thead-color                : #{$background-lighter};
