--- a/_sass/include/_utilities.scss
+++ b/_sass/include/_utilities.scss
@@ -490,7 +490,7 @@ a.reversefootnote {
 
   &:hover {
     text-decoration: underline;
-     text-decoration-color: #FFFF00;
+     text-decoration-underline-color: #FFFF00;
   }
 }
 
