--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -60,7 +60,7 @@
   display: block;
   list-style-type: none;
   white-space: nowrap;
-
+text-decoration-color: #ffff00 !important;
    padding-left: 1.2em; 
   padding-right: 1.2em;
   
