--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -65,3 +65,11 @@ text-decoration-color: #ffff00 !important;
   padding-right: 1.2em;
   
 }
+.masthead__menu-item a:hover {
+  text-decoration-color: #ff5733 !important; /* Change the underline color */
+}
+
+// You might also need to change the link's text color
+.masthead a:hover {
+  color: #ff5733 !important; /* Change the text color */
+}
