--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -41,10 +41,10 @@ $sidebar-screen-min-width   : 1024px;
     --global-footer-bg-color            : #{$footer};
     --global-border-color               : #{$light-primary-color};
     --global-dark-border-color          : #{$background-light};
-    --global-code-background-color      : #fafafa;
+    --global-code-background-color      : #FFFF00;
     --global-code-text-color            : #{$darker-primary-color};
     --global-fig-caption-color          : #{$light-primary-color};
-    --global-link-color                 : #{$link};
+    --global-link-color                 : #FFFF00;
     --global-link-color-hover           : #FFFF00;
     --global-link-color-visited         : #{$link-light};
     --global-masthead-link-color        : #FFFF00;
