--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -3,12 +3,12 @@
    ========================================================================== */
 
 /* Color codes used for the theme */
-$primary-color              : #7a8288;
+$primary-color              : #FFFF00;
 $dark-primary-color         : mix(#000, $primary-color, 40%);
 $darker-primary-color       : mix(#000, $primary-color, 60%);
 $light-primary-color        : mix(#000, $primary-color, 50%);
 
-$background                 : #eeeeee;
+$background                 : #FFFF00;
 $background-light           : mix(#fff, $background, 20%);
 $background-lighter         : mix(#fff, $background, 90%);
 $text                       : #222831;
