--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -26,7 +26,7 @@ $warning-color              : #f89406;
 
 /* Other basic settings for the template */
 $border-radius              : 4px;
-$box-shadow                 : 0 1px 1px #FFFF00;
+$box-shadow                 : 0 1px 1px #FF0000;
 $global-transition          : all 0.2s ease-in-out;
 $masthead-height            : 70px;
 $navicon-width              : 28px;
