--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -4,9 +4,9 @@
 
 /* Color codes used for the theme */
 $primary-color              : #FFFF00;
-$dark-primary-color         : #FFFF00;
-$darker-primary-color       : #FFFF00;
-$light-primary-color        : #FFFF00;
+$dark-primary-color         : #FF0000;
+$darker-primary-color       : #FF0000;
+$light-primary-color        : #FF0000;
 
 $background                 : #FFFF00;
 $background-light           : #FFFF00;
