--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -5,8 +5,8 @@
 /* Color codes used for the theme */
 $primary-color              : #FFFF00;
 $dark-primary-color         : #FF0000;
-$darker-primary-color       : #FF0000;
-$light-primary-color        : #FF0000;
+$darker-primary-color       : #FFF000;
+$light-primary-color        : #FFF000;
 
 $background                 : #FFFF00;
 $background-light           : #FFFF00;
