--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -5,7 +5,7 @@
 /* Color codes used for the theme */
 $primary-color              : #FFFF00;
 $dark-primary-color         : #002aff;
-$darker-primary-color       : #FFF000;
+$darker-primary-color       : #002aff;
 $light-primary-color        : #FFF000;
 
 $background                 : #FFFF00;
