--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -6,14 +6,14 @@
 $primary-color              : #FFFF00;
 $dark-primary-color         : #002aff;
 $darker-primary-color       : #002aff;
-$light-primary-color        : #FFF000;
+$light-primary-color        : #002aff;
 
 $background                 : #FFFF00;
 $background-light           : #FFFF00;
 $background-lighter         : #FFFF00;
 $text                       : #222831;
 $link                       : #FF0000;
-$link-dark                  : #FF0000;
+$link-dark                  : #002aff;
 $link-light                 : #FF0000;
 $footer                     : $primary-color;
 
