--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -12,9 +12,9 @@ $background                 : #FFFF00;
 $background-light           : #FFFF00;
 $background-lighter         : #FFFF00;
 $text                       : #222831;
-$link                       : #FF0000;
+$link                       : #002aff;
 $link-dark                  : #002aff;
-$link-light                 : #FF0000;
+$link-light                 : #002aff;
 $footer                     : $primary-color;
 
 /* Color codes used for the site */
