--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -12,7 +12,7 @@ $background                 : #FFFF00;
 $background-light           : #FFFF00;
 $background-lighter         : #FFFF00;
 $text                       : #222831;
-$link                       : #002aff;
+$link                       : #FF0000;
 $link-dark                  : #002aff;
 $link-light                 : #002aff;
 $footer                     : $primary-color;
