--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -45,7 +45,7 @@ $sidebar-screen-min-width   : 1024px;
     --global-code-text-color            : #{$darker-primary-color};
     --global-fig-caption-color          : #{$light-primary-color};
     --global-link-color                 : #FF0000;
-    --global-link-color-hover           : #FF0000;
+    --global-link-color-hover           : #002aff;
     --global-link-color-visited         : #{$link-light};
     --global-masthead-link-color        : #FF0000;
     --global-masthead-link-color-hover  : #FF0000;
