--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -4,17 +4,17 @@
 
 /* Color codes used for the theme */
 $primary-color              : #FFFF00;
-$dark-primary-color         : #002aff;
-$darker-primary-color       : #002aff;
-$light-primary-color        : #002aff;
+$dark-primary-color         : #002AFF;
+$darker-primary-color       : #002AFF;
+$light-primary-color        : #002AFF;
 
 $background                 : #FFFF00;
 $background-light           : #FFFF00;
 $background-lighter         : #FFFF00;
-$text                       : #222831;
-$link                       : #002aff;
-$link-dark                  : #002aff;
-$link-light                 : #002aff;
+$text                       : #002AFF;
+$link                       : #002AFF;
+$link-dark                  : #002AFF;
+$link-light                 : #002AFF;
 $footer                     : $primary-color;
 
 /* Color codes used for the site */
