--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -4,8 +4,8 @@
 
 /* Color codes used for the theme */
 $primary-color              : #FFFF00;
-$dark-primary-color         : #002AFF;
-$darker-primary-color       : #002AFF;
+$dark-primary-color         : #FF0000;
+$darker-primary-color       : #FF0000;
 $light-primary-color        : #002AFF;
 
 $background                 : #FFFF00;
