--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -6,12 +6,12 @@
 $primary-color              : #FFFF00;
 $dark-primary-color         : #FF0000;
 $darker-primary-color       : #FF0000;
-$light-primary-color        : #002AFF;
+$light-primary-color        : #FF0000;
 
 $background                 : #FFFF00;
 $background-light           : #FFFF00;
 $background-lighter         : #FFFF00;
-$text                       : #002AFF;
+$text                       : #FF0000;
 $link                       : #FF0000;
 $link-dark                  : #FF0000;
 $link-light                 : #002AFF;
