--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -48,7 +48,7 @@ $sidebar-screen-min-width   : 1024px;
     --global-link-color-hover           : #002aff;
     --global-link-color-visited         : #{$link-light};
     --global-masthead-link-color        : #002aff;
-    --global-masthead-link-color-hover  : #002aff;
+    --global-masthead-link-color-hover  : #FF0000;
     --global-text-color                 : #{$text};
     --global-text-color-light           : #{$light-primary-color};
     --global-thead-color                : #{$background-lighter};
