--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -14,7 +14,7 @@ $background-lighter         : #FFFF00;
 $text                       : #FF0000;
 $link                       : #FF0000;
 $link-dark                  : #FF0000;
-$link-light                 : #002AFF;
+$link-light                 : #FF0000;
 $footer                     : $primary-color;
 
 /* Color codes used for the site */
@@ -47,7 +47,7 @@ $sidebar-screen-min-width   : 1024px;
     --global-link-color                 : #002aff;
     --global-link-color-hover           : #002aff;
     --global-link-color-visited         : #{$link-light};
-    --global-masthead-link-color        : #002aff;
+    --global-masthead-link-color        : #FF0000;
     --global-masthead-link-color-hover  : #FF0000;
     --global-text-color                 : #{$text};
     --global-text-color-light           : #{$light-primary-color};
