--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -44,11 +44,11 @@ $sidebar-screen-min-width   : 1024px;
     --global-code-background-color      : #002aff;
     --global-code-text-color            : #{$darker-primary-color};
     --global-fig-caption-color          : #{$light-primary-color};
-    --global-link-color                 : #002aff;
+    --global-link-color                 : #002AFF;
     --global-link-color-hover           : #002aff;
     --global-link-color-visited         : #{$link-light};
     --global-masthead-link-color        : #FF0000;
-    --global-masthead-link-color-hover  : #FF0000;
+    --global-masthead-link-color-hover  : #002AFF;
     --global-text-color                 : #{$text};
     --global-text-color-light           : #{$light-primary-color};
     --global-thead-color                : #{$background-lighter};
