--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -47,7 +47,7 @@ $sidebar-screen-min-width   : 1024px;
     --global-link-color                 : #002AFF;
     --global-link-color-hover           : #002aff;
     --global-link-color-visited         : #{$link-light};
-    --global-masthead-link-color        : #FF0000;
+    --global-masthead-link-color        : #002AFF;
     --global-masthead-link-color-hover  : #002AFF;
     --global-text-color                 : #{$text};
     --global-text-color-light           : #{$light-primary-color};
