--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -41,11 +41,11 @@ $sidebar-screen-min-width   : 1024px;
     --global-footer-bg-color            : #{$footer};
     --global-border-color               : #{$light-primary-color};
     --global-dark-border-color          : #{$background-light};
-    --global-code-background-color      : #002aff;
+    --global-code-background-color      : #002AFF;
     --global-code-text-color            : #{$darker-primary-color};
     --global-fig-caption-color          : #{$light-primary-color};
     --global-link-color                 : #002AFF;
-    --global-link-color-hover           : #002aff;
+    --global-link-color-hover           : #002AFF;
     --global-link-color-visited         : #{$link-light};
     --global-masthead-link-color        : #002AFF;
     --global-masthead-link-color-hover  : #002AFF;
