--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -13,7 +13,7 @@ $background-light           : #FFFF00;
 $background-lighter         : #FFFF00;
 $text                       : #FF0000;
 $link                       : #FF0000;
-$link-dark                  : #FF0000;
+$link-dark                  : #002AFF;
 $link-light                 : #002AFF;
 $footer                     : $primary-color;
 
