--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -4,7 +4,7 @@
 
 /* Color codes used for the theme */
 $primary-color              : #FFFF00;
-$dark-primary-color         : #FF0000;
+$dark-primary-color         : #002AFF;
 $darker-primary-color       : #FF0000;
 $light-primary-color        : #FF0000;
 
