--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -6,7 +6,7 @@
 $primary-color              : #FFFF00;
 $dark-primary-color         : #002AFF;
 $darker-primary-color       : #002AFF;
-$light-primary-color        : #FF0000;
+$light-primary-color        : #002AFF;
 
 $background                 : #FFFF00;
 $background-light           : #FFFF00;
