--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -14,7 +14,7 @@ $background-lighter         : #FFFF00;
 $text                       : #FF0000;
 $link                       : #FF0000;
 $link-dark                  : #FF0000;
-$link-light                 : #002AFF;
+$link-light                 : #FF0000;
 $footer                     : $primary-color;
 
 /* Color codes used for the site */
