--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -4,9 +4,9 @@
 
 /* Color codes used for the theme */
 $primary-color              : #FFFF00;
-$dark-primary-color         : #002AFF;
+$dark-primary-color         : #00CC00;
 $darker-primary-color       : #FF0000;
-$light-primary-color        : #002AFF;
+$light-primary-color        : #0066FF;
 
 $background                 : #FFFF00;
 $background-light           : #FFFF00;
