--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -8,10 +8,10 @@ $dark-primary-color         : #00CC00;
 $darker-primary-color       : #FF0000;
 $light-primary-color        : #0066FF;
 
-$background                 : #FFFF00;
+$background                 : #00CC00;
 $background-light           : #FFFF00;
-$background-lighter         : #FFFF00;
-$text                       : #FF0000;
+$background-lighter         : #FF0000;
+$text                       : #0066FF;
 $link                       : #FF0000;
 $link-dark                  : #FF0000;
 $link-light                 : #FF0000;
