--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -12,7 +12,7 @@ $background                 : #00CC00;
 $background-light           : #FFFF00;
 $background-lighter         : #FF0000;
 $text                       : #0066FF;
-$link                       : #FF0000;
+$link                       : #FFFF00;
 $link-dark                  : #FF0000;
 $link-light                 : #FF0000;
 $footer                     : $primary-color;
