--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -13,8 +13,8 @@ $background-light           : #FFFF00;
 $background-lighter         : #FF0000;
 $text                       : #0066FF;
 $link                       : #FFFF00;
-$link-dark                  : #FF0000;
-$link-light                 : #FF0000;
+$link-dark                  : #00CC00;
+$link-light                 : #00CC00;
 $footer                     : $primary-color;
 
 /* Color codes used for the site */
