--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -45,9 +45,9 @@ $sidebar-screen-min-width   : 1024px;
     --global-code-text-color            : #{$darker-primary-color};
     --global-fig-caption-color          : #{$light-primary-color};
     --global-link-color                 : #002AFF;
-    --global-link-color-hover           : #002AFF;
+    --global-link-color-hover           : #00CC00;
     --global-link-color-visited         : #{$link-light};
-    --global-masthead-link-color        : #002AFF;
+    --global-masthead-link-color        : #00CC00;
     --global-masthead-link-color-hover  : #00CC00;
     --global-text-color                 : #{$text};
     --global-text-color-light           : #{$light-primary-color};
