--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -3,16 +3,16 @@
    ========================================================================== */
 
 /* Color codes used for the theme */
-$primary-color              : #FFFF00;
+$primary-color              : #00CC00;
 $dark-primary-color         : #00CC00;
 $darker-primary-color       : #FF0000;
-$light-primary-color        : #0066FF;
+$light-primary-color        : #00CC00;
 
 $background                 : #00CC00;
-$background-light           : #FFFF00;
-$background-lighter         : #FF0000;
-$text                       : #0066FF;
-$link                       : #FFFF00;
+$background-light           : #00CC00;
+$background-lighter         : #00CC00;
+$text                       : #00CC00;
+$link                       : #00CC00;
 $link-dark                  : #00CC00;
 $link-light                 : #00CC00;
 $footer                     : $primary-color;
