--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -18,11 +18,11 @@ $link-light                 : #00CC00;
 $footer                     : $primary-color;
 
 /* Color codes used for the site */
-$danger-color               : #ee5f5b;
-$info-color                 : #2f7f93;
-$notice-color               : #7a8288;
-$success-color              : #62c462;
-$warning-color              : #f89406;
+$danger-color               : #00CC00;
+$info-color                 : #00CC00;
+$notice-color               : #00CC00;
+$success-color              : #00CC00;
+$warning-color              : #00CC00;
 
 /* Other basic settings for the template */
 $border-radius              : 4px;
