--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -66,10 +66,10 @@ text-decoration-color: #ffff00 !important;
   
 }
 .masthead__menu-item a:hover {
-  text-decoration-color: #ff5733 !important; /* Change the underline color */
+  text-decoration-color: #FFFF00; /* Change the underline color */
 }
 
 // You might also need to change the link's text color
 .masthead a:hover {
-  color: #ff5733 !important; /* Change the text color */
+  color: #FFFF00; /* Change the text color */
 }
