--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -4,8 +4,8 @@
 
 /* Color codes used for the theme */
 $primary-color              : #00CC00;
-$dark-primary-color         : #00CC00;
-$darker-primary-color       : #FFFF00;
+$dark-primary-color         : #FFFF00;
+$darker-primary-color       : #00CC00;
 $light-primary-color        : #00CC00;
 
 $background                 : #00CC00;
