--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -6,7 +6,7 @@
 $primary-color              : #00CC00;
 $dark-primary-color         : #00CC00;
 $darker-primary-color       : #00CC00;
-$light-primary-color        : #FFFF00;
+$light-primary-color        : #0066FF;
 
 $background                 : #00CC00;
 $background-light           : #00CC00;
