--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -66,7 +66,7 @@ text-decoration-color: #ffff00 !important;
   
 }
 .masthead__menu-item a:hover {
-  text-decoration-color: #FFFF00; /* Change the underline color */
+  text-decoration-color: #0066FF; /* Change the underline color */
 }
 
 // You might also need to change the link's text color
