--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -71,5 +71,5 @@ text-decoration-color: #ffff00 !important;
 
 // You might also need to change the link's text color
 .masthead a:hover {
-  color: #FFFF00; /* Change the text color */
+  color: #0066FF; /* Change the text color */
 }
