--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -136,7 +136,7 @@
     border-radius: $border-radius;
 
     &:hover {
-      color: #FFFF00;
+      color: #00CC00;
     }
 
     &:first-child {
@@ -185,7 +185,7 @@
     text-decoration: none;
 
     &:hover {
-      color: #FFFF00;
+      color: #0066FF;
     }
   }
 
