--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -4,7 +4,7 @@
 
 /* Color codes used for the theme */
 $primary-color              : #0092ca;
-$dark-primary-color         : mix(#000, $primary-color, 40%);
+$dark-primary-color         : #FF0000;
 $darker-primary-color       : mix(#000, $primary-color, 60%);
 $light-primary-color        : mix(#000, $primary-color, 50%);
 
