--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -5,7 +5,7 @@
 /* Color codes used for the theme */
 $primary-color              : #0092ca;
 $dark-primary-color         : #FF0000;
-$darker-primary-color       : mix(#000, $primary-color, 60%);
+$darker-primary-color       : #FF0000;
 $light-primary-color        : mix(#000, $primary-color, 50%);
 
 $background                 : #eeeeee;
