--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -6,7 +6,7 @@
 $primary-color              : #0092ca;
 $dark-primary-color         : #FF0000;
 $darker-primary-color       : #FF0000;
-$light-primary-color        : mix(#000, $primary-color, 50%);
+$light-primary-color        : #FF0000;
 
 $background                 : #eeeeee;
 $background-light           : mix(#fff, $background, 20%);
