--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -5,8 +5,8 @@
 /* Color codes used for the theme */
 $primary-color              : #0092ca;
 $dark-primary-color         : #FF0000;
-$darker-primary-color       : #FF0000;
-$light-primary-color        : #FF0000;
+$darker-primary-color       : #00CC00;
+$light-primary-color        : #FFFF00; 
 
 $background                 : #eeeeee;
 $background-light           : mix(#fff, $background, 20%);
