--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -20,7 +20,7 @@
     position: absolute;
     bottom: 0;
     height: 1px;
-    background: var(--global-border-color);
+    background: #00CC00;
     width: 100%;
   }
 
