--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -84,7 +84,7 @@
       text-align: center;
       text-decoration: none;
       color: var(--global-text-color-light);
-      border: 1px solid var(--global-border-color);
+      border: 1px solid #00CC00;
       border-radius: 0;
 
       &:hover {
