--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -164,7 +164,7 @@
 .page__comments + .pagination {
   margin-top: 2em;
   padding-top: 2em;
-  border-top: 1px solid var(--global-border-color);
+  border-top: 1px solid #00CC00;
 }
 
 
